# ALE-Bench

./: .env.example  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: check.yml
cloud/: main.tf  setup.sh  setup_mcp.sh  variables.tf
dockerfiles/: Dockerfile_cpp17_201907  Dockerfile_cpp17_201907_base  Dockerfile_cpp17_202301  Dockerfile_cpp17_202301_base  Dockerfile_cpp20_202301  Dockerfile_cpp20_202301_base  Dockerfile_cpp23_202301  Dockerfile_cpp23_202301_base  Dockerfile_python_201907  Dockerfile_python_201907_base  Dockerfile_python_202301  Dockerfile_python_202301_base  Dockerfile_rust_201907  Dockerfile_rust_201907_base  Dockerfile_rust_202301  Dockerfile_rust_202301_base  rust_201907_Cargo.toml  rust_202301_Cargo.toml
docs/: README.md  evaluation.md  mcp_server.md  rating_and_ranking.md  session_object.md
llm_configs/: deepseek-v3.1-terminus.json  glm-4.6.json  qwen3-next-thinking.json
mcp/: pyproject.toml  server.py
scripts/: docker_build_202301.sh  docker_build_all.sh  docker_build_base_all.sh  docker_pull_202301.sh  docker_pull_all.sh  docker_push_all.sh  docker_rmi_all.sh  run_eval.sh
src/ale_bench/: __init__.py  constants.py  data.py  result.py  schemas.py  session.py  start.py  utils.py
src/ale_bench/backends/: __init__.py  base.py  docker.py  local_backend.py  modal_backend.py
src/ale_bench/tool_wrappers/: __init__.py  case_runner.py  code_runner.py  input_generation.py  local_visualization.py
src/ale_bench_eval/: __init__.py  __main__.py  analyze_results.py  calc_cost.py  data_types.py  evaluate.py  logger.py  safe_ale_session.py  safe_generation.py  scaffolds.py  selection.py  shared_async_loop.py
src/ale_bench_eval/codes/: ce_cpp20.cpp  ce_python.py  ce_rust.rs
src/ale_bench_eval/prompts/: builder.py  texts.py
tests/: test_data.py  test_result.py  test_schemas.py  test_session.py  test_utils.py
tests/judge/: test_ce.py  test_code_run.py  test_mle.py  test_tle.py
tests/judge/codes/: ce_cpp17.cpp  ce_cpp20.cpp  ce_cpp23.cpp  ce_python.py  ce_rust.rs  mle_cpp17.cpp  mle_cpp20.cpp  mle_cpp23.cpp  mle_python.py  mle_rust.rs  tle_cpp17.cpp  tle_cpp20.cpp  tle_cpp23.cpp  tle_python.py  tle_rust.rs
tests/tool_wrappers/: test_case_runner.py  test_code_runner.py  test_input_generation.py  test_local_visualization.py
